--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -4,7 +4,7 @@
   background-position: center;
   width: 100vw;
   height: 100vh;
-  position: relative;
+  position: fixed;
   isolation: isolate;
 }
 
